--- a/core-ui/src/main/res/layout/holder_movie.xml
+++ b/core-ui/src/main/res/layout/holder_movie.xml
@@ -4,10 +4,11 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="4dp"
+    android:elevation="8dp"
     android:background="?selectableItemBackgroundBorderless"
     android:layout_marginHorizontal="2dp"
     android:paddingVertical="2dp"
+    android:layout_marginVertical="4dp"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,6 +35,7 @@
             app:layout_constraintBottom_toTopOf="@id/movieInfo"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
+            android:maxLines="1"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/primary_text"
