--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="secondaryButton">#FF0094FF</color>
+    <color name="primaryButton">#FFDEEFFF</color>
+
     <color name="transparent">#00FFFFFF</color>
 </resources>
