--- a/core-ui/src/main/res/layout/holder_movie.xml
+++ b/core-ui/src/main/res/layout/holder_movie.xml
@@ -4,11 +4,11 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="8dp"
+    android:elevation="12dp"
     android:background="?selectableItemBackgroundBorderless"
     android:layout_marginHorizontal="2dp"
     android:paddingVertical="2dp"
-    android:layout_marginVertical="4dp"
+    android:layout_marginVertical="6dp"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,14 +33,13 @@
             app:layout_constraintStart_toEndOf="@id/moviePoster"
             app:layout_constraintTop_toTopOf="@id/moviePoster"
             app:layout_constraintBottom_toTopOf="@id/movieInfo"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="16dp"
             android:maxLines="1"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/primary_text"
             tools:text="Avengers: Endgame"/>
-
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/movieInfo"
@@ -61,10 +60,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/favorites_star"
-            android:layout_marginHorizontal="16dp"
+            android:backgroundTint="@color/transparent"
+            android:layout_marginHorizontal="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/movieName"
-            android:visibility="gone"/>
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@id/movieName"
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
